--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
     />
   </head>
   <body>
+    <h1>hello</h1>
     <include src="./markup/footer.html"></include>
     <include src="./markup/header.html"></include>
     <include src="./markup/scroll-up.html"></include>
