--- a/src/index.html
+++ b/src/index.html
@@ -6,13 +6,13 @@
     <link rel="icon" type="image/png" href="./img/svg/favicon.png" />
     <title>Bookshelf</title>
     <link rel="stylesheet" href="css/index.css" />
-    
   </head>
   <body>
     <header>
       <include src="./markup/header.html"></include>
     </header>
     <main>
+      <include src="./markup/shopping-list/"></include>
       <include src="./markup/categories-books.html"></include>
       <include src="./markup/best-sellers.html"></include>
       <include src="./markup/soport-ukraine.html"></include>
