--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/png" href="./img/svg/favicon.png" />
+    <link rel="icon" type="image/png" href="./img/images/favicon.png" />
     <title>Bookshelf</title>
     <link rel="stylesheet" href="css/index.css" />
   </head>
@@ -14,7 +14,7 @@
     <main>
       <include src="./markup/categories-books.html"></include>
       <include src="./markup/best-sellers.html"></include>
-      <include src="./markup/soport-ukraine.html"></include>
+      <include src="./markup/support-ukraine.html"></include>
       <include src="./markup/authorization.html"></include>
       <include src="./markup/scroll-up.html"></include>
       <include src="./markup/modal/modal.html"> </include>
