--- a/src/index.html
+++ b/src/index.html
@@ -12,12 +12,14 @@
       <include src="./markup/header.html"></include>
     </header>
     <main>
-      <include src="./markup/categories-books.html"></include>
+      <!-- <include src="./markup/categories-books.html"></include>
       <include src="./markup/best-sellers.html"></include>
       <include src="./markup/support-ukraine.html"></include>
       <include src="./markup/authorization.html"></include>
       <include src="./markup/scroll-up.html"></include>
-      <include src="./markup/modal/modal.html"> </include>
+      <include src="./markup/modal/modal.html"> </include> -->
+      <include src="./markup/Shop-List-di.html"> </include>
+      
     </main>
     <footer>
       <include src="./markup/footer.html"></include>
