the function of saving and receiving information from localStorage

--- a/src/markup/shop-list-di.html
+++ b/src/markup/shop-list-di.html
@@ -11,6 +11,12 @@
    
 
 <section class="shopping-list ">
+    
+<!-- спісок з локал-сторідж -->
+
+<ul></ul>
+
+<!-- дефолтний вигляд -->
 
   <div class="shop-div">
     <h1 class="shop-title">
