added modern-normalize. updated packages

--- a/src/markup/header.html
+++ b/src/markup/header.html
@@ -1,12 +1,13 @@
 <header>
   <nav>
-    <a href="">
+    <a href="~/src/index.html">
       <svg><use></use></svg>
+    <span>Bookshelf</span>
     </a>
     <ul>
-      <li><a href="">HOME</a></li>
+      <li><a href="">Home</a></li>
       <li>
-        <a href="">
+        <a href="~/src/markup/shopping-list/shopping-list.html">
             <span>Shopping list</span>
             <svg><use></use></svg></a>
       </li>
