--- a/src/markup/shop-list-di.html
+++ b/src/markup/shop-list-di.html
@@ -1,17 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/png" href="./img/images/favicon.png" />
-    <title>Bookshelf</title>
-    <link rel="stylesheet" href="css/index.css" />
-  </head>
-  <body class="container">
-   
 
-<section class="shopping-list ">
-    
+
+<section class="shopping-list container ">
+
 <!-- спісок з локал-сторідж -->
 
 <ul></ul>
@@ -43,7 +33,7 @@
 
     <ul class="shop-list-books js-shop-list"></ul>
   </div>
-</section>
+
 
 
 <!-- <li>
@@ -59,7 +49,4 @@
               </a>
            </div>
         </li>`-->
-
-
-  </body>
-</html>
+</section>
