--- a/src/markup/support-ukraine.html
+++ b/src/markup/support-ukraine.html
@@ -1,4 +1,4 @@
-<section class="support-ukraine"></section>
+<section class="support-ukraine">
 <div class="support">
     <h3 class="support-header">Support Ukraine</h3>
     <div class="support-container">
