--- a/src/markup/support-ukraine.html
+++ b/src/markup/support-ukraine.html
@@ -7,3 +7,5 @@
     <button class="support-down-btn"></button>
 </div>
 </section>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
