--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,7 @@
     </footer>
 
 
-    <script type="module" src="./js/index.js"></script>
+    <script type="module" src="./js/index.js"></script> 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
   </body>
 </html>
