--- a/src/markup/header.html
+++ b/src/markup/header.html
@@ -5,7 +5,7 @@
     <span>Bookshelf</span>
     </a>
     <ul>
-      <li><a href="">Home</a></li>
+      <li><a href="~/src/index.html">Home</a></li>
       <li>
         <a href="~/src/markup/shopping-list/shopping-list.html">
             <span>Shopping list</span>
