--- a/src/markup/header.html
+++ b/src/markup/header.html
@@ -16,7 +16,7 @@
           >
             <span class="header-shopping">Shopping list</span>
             <svg class="shopping-icon">
-              <use href="~/src/img/icons.svg#icon-lock-02"></use>
+              <use href="~/src/img/icons.svg#shop-list-icon"></use>
             </svg>
             <p class="counter-value"></p>
           </a>
@@ -30,10 +30,12 @@
   </div>
   <div class="auth-menu-root"></div>
   <button class="menu-open" type="button">
+    <span>Log in</span>
     <svg class="menu-open-icon">
       <use href="~/src/img/icons.svg#icon-align-left"></use>
     </svg>
   </button>
+
   <div class="backdrop-header is-hidden">
     <div class="mob-menu-wrapper">
       <div class="mobile-menu">
@@ -42,7 +44,7 @@
             <nav class="header-title">
               <a href="~/src/index.html" class="title-link">
                 <svg class="header-icon">
-                  <use href="~/src/img/logo-light-theme.svg"></use>
+                  <use href="~/src/img/icons.svg#icon-logo-light-theme"></use>
                 </svg>
               </a>
               <ul class="header-nav">
@@ -56,7 +58,7 @@
                   >
                     <span class="header-shopping">Shopping list</span>
                     <svg class="shopping-icon">
-                      <use href="~/src/img/icons.svg#icon-lock-02"></use>
+                      <use href="~/src/img/icons.svg#shop-list-icon"></use>
                     </svg>
                   </a>
                 </li>
@@ -93,7 +95,7 @@
               >
                 <span class="header-shopping">Shopping list</span>
                 <svg class="shopping-icon">
-                  <use href="~/src/img/icons.svg#icon-lock-02"></use>
+                  <use href="~/src/img/icons.svg#shop-list-icon"></use>
                 </svg>
               </a>
             </li>
