added function for current bg-color

--- a/src/markup/header.html
+++ b/src/markup/header.html
@@ -2,7 +2,7 @@
   <nav class="header-title">
     <a href="~/src/index.html" class="title-link">
       <svg class="header-icon">
-        <use href="~/src/img/icons.svg#icon-logo-light-theme"></use>
+        <use href="~/src/img/logo-light-theme.svg"></use>
       </svg>
       <span class="header-logo-name">Bookshelf</span>
     </a>
