fixed duplicate conflict

--- a/src/markup/header.html
+++ b/src/markup/header.html
@@ -69,9 +69,9 @@
                 <input
                   type="checkbox"
                   class="js-theme-switch"
-                  id="toggle-theme"
+                  id="mobile-toggle-theme"
                 />
-                <label for="toggle-theme" class="toggle"></label>
+                <label for="mobile-toggle-theme" class="toggle"></label>
               </div>
               <div class="auth-menu-root"></div>
             </div>
