--- a/src/markup/categories-books.html
+++ b/src/markup/categories-books.html
@@ -1,3 +1,5 @@
 <section class="category-books">
-    <ul class="list-category-books"></ul>
+  <ul class="list-category-books">
+    <li class="all-category">All categories</li>
+  </ul>
 </section>
