--- a/src/markup/shop-list-di.html
+++ b/src/markup/shop-list-di.html
@@ -1,10 +1,9 @@
 
-
 <section class="shopping-list container ">
 
 <!-- спісок з локал-сторідж -->
 
-<ul></ul>
+<div class="shopping-book">
 
 <!-- дефолтний вигляд -->
 
@@ -34,7 +33,7 @@
     <ul class="shop-list-books js-shop-list"></ul>
   </div>
 
-
+</div>
 
 <!-- <li>
           <h2 class= "title-categonry-name">${e.listName}</h2>
